fix(FEC-8750): playlist countdown is not fit to the player size

--- a/src/components/playlist-countdown/_playlist-countdown.scss
+++ b/src/components/playlist-countdown/_playlist-countdown.scss
@@ -111,7 +111,7 @@
     }
   }
 
-  @media screen and (max-width: 767px) {
+  &.size-md {
     .playlist-countdown {
       height: 54px;
 
@@ -144,7 +144,7 @@
     }
   }
 
-  @media screen and (max-width: 479px) {
+  &.size-sm {
     .playlist-countdown {
       z-index: 1;
       height: 36px;
